fixing section 4 text/img alignming issue

--- a/style.css
+++ b/style.css
@@ -232,6 +232,8 @@ body{
     width: 100%;
     justify-content: end;
     align-items: center;
+    position: relative;
+    overflow: hidden;
 }
 
 .cherry-background{
@@ -249,10 +251,11 @@ body{
     justify-content: center;
     position: absolute;
     flex: 1;
-    width: 40%;
+    width: 81%;
     text-align: center;
     margin-bottom: 4%;
-    font-size: 115%;}
+    bottom: 7%;
+}
 
 .section-4-heading{
     color: #235248;
@@ -261,6 +264,7 @@ body{
 .section-4-paragraph{
     color: #3B7567;
     overflow: hidden;
+    font-size: 120%;
 }
 
 .section-4-heading{
